gccida/c1/ix86_function_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/i386.c:2747:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v3; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/i386.c:2754:33: error: use of undeclared identifier 'machine_mode'
result = construct_container( ( machine_mode)v2, valtype, 1, 6, 8, x86_64_int_return_registers, 0); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/i386.c:2762:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = mode_class_0[v2]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/i386.c:2774:23: error: use of undeclared identifier 'machine_mode'
return gen_rtx_REG( ( machine_mode)v2, v4); 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_function_value/src/obj/i386.o] Error 1
